@@ -1292,6 +1292,45 @@
 2254,0,0,0,0,15000,250000:200000:150000:100000:50000
 //==========================================
 
+
+//===== Shadow Chaser ======================
+//-- SC_REPRODUCE
+2285,0,0,0,0,60000,0
+//-- SC_AUTOSHADOWSPELL
+2286,0,2000,0,0,60000:80000:100000:120000:140000:160000:180000:200000:220000:240000,0
+//-- SC_SHADOWFORM
+2287,0,2000,0,0,30000,0
+//-- SC_TRIANGLESHOT
+2288,2000,0,1000,0,0,0
+//-- SC_BODYPAINT
+2289,0,2000,0,0,5000:7000:9000:11000:13000,5000
+//-- SC_INVISIBILITY
+2290,0,2000,0,0,180000,0
+//-- SC_ENERVATION
+2292,0,2000,0,0,10000:15000:20000,0
+//-- SC_GROOMY
+2293,0,2000,0,0,10000:15000:20000,0
+//-- SC_IGNORANCE
+2294,0,2000,0,0,10000:15000:20000,0
+//-- SC_LAZINESS
+2295,0,2000,0,0,10000:15000:20000,0
+//-- SC_UNLUCKY
+2296,0,2000,0,0,10000:15000:20000,0
+//-- SC_WEAKNESS
+2297,0,2000,0,0,10000:15000:20000,0
+//-- SC_STRIPACCESORY
+2298,1000,1000,0,0,60000:60000:60000:60000:60000,0
+//-- SC_MANHOLE
+2299,0,500,0,0,30000,5000:1000:15000
+//-- SC_DIMENSIONDOOR
+2300,0,2000,0,0,4000:8000:12000,0
+//-- SC_CHAOSPANIC
+2301,0,2000,0,0,5000:10000:15000,0
+//-- SC_BLOODYLUST
+2303,0,2000,0,0,7000:14000:21000,0
+//-- SC_FEINTBOMB
+2304,800,0,5000,0,1000,1000
+//==========================================
 //===== Extra 3rd Class Skills =============
 //-- AB_SECRAMENT
 2515,2000,500,0,0,60000:90000:120000:150000:180000,0
