@@ -904,7 +904,7 @@
 2285,0,0,0,0,0,0,10,0,no,0,0,0,none,0,	SC_REPRODUCE,Reproduce
 2286,0,0,0,0,0,0,10,0,no,0,0,0,none,0,	SC_AUTOSHADOWSPELL,Auto Shadow Spell
 2287,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		SC_SHADOWFORM,Shadow Form
-2288,0,0,0,0,0,0,10,0,no,0,0,0,none,0,	SC_TRIANGLESHOT,Triangle Shot
+2288,7:7:7:9:9:9:9:11:11:11,8,1,-1,0,0,10,-3,yes,0,0,0,weapon,4,		SC_TRIANGLESHOT,Triangle Shot
 2289,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		SC_BODYPAINT,Body Painting
 2290,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		SC_INVISIBILITY,Invisibility
 2291,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		SC_DEADLYINFECT,Deadly Infect
